interactive layers with download functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>realestate-3d-fe</title>
+    <!-- Preconnect to Cesium Ion servers for faster asset loading -->
+    <link rel="preconnect" href="https://api.cesium.com" />
+    <link rel="preconnect" href="https://assets.cesium.com" />
+    <link rel="dns-prefetch" href="https://api.cesium.com" />
+    <link rel="dns-prefetch" href="https://assets.cesium.com" />
   </head>
   <body>
     <div id="root"></div>
